spacing fixes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,7 +158,9 @@
           padding-top: 20px;
           text-align: center;
         }
-        
+        p.project-skills-final {
+            text-align: center;
+        }
         .project-demo {
           text-align: center;
         }
@@ -244,8 +246,8 @@
           padding-top: 15px;
           text-align: center;
         }
-        .project-skills-final {
-          text-align: center;
+        p.project-skills-final {
+            text-align: center;
         }
         .project-demo {
           text-align: center;
